--- a/views/index.html
+++ b/views/index.html
@@ -213,7 +213,7 @@ pre {
 
 </head>
 <body>
-<h1>OUR AMAZING APP ROCKS!</h1>
+<h1 style="margin: auto">OUR AMAZING APP ROCKS!</h1>
 <section class='container'>
           <hgroup>
             <h1>Welcome to your Node.js application on OpenShift</h1>
